--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "preversion": "npm run lint",
     "postversion": "git push origin master && git push origin --tags",
-    "lint": "fecs check index.js config.js lib/"
+    "lint": "fecs check index.js config.js lib/ test/ ./*.js",
+    "test": "mocha --reporter spec --timeout 5000 --recursive test/",
+    "test:cov": "istanbul cover node_modules/mocha/bin/_mocha -- -t 5000 --recursive  -R spec test/",
+    "test:watch": "npm test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -38,6 +41,11 @@
     "glob": "^7.1.2"
   },
   "devDependencies": {
-    "fecs": "^1.4.1"
+    "chai": "^4.1.2",
+    "fecs": "^1.4.1",
+    "istanbul": "^0.4.5",
+    "mocha": "^4.0.1",
+    "sinon": "^4.0.1",
+    "sinon-chai": "^2.14.0"
   }
 }
