--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ node_js:
   - '8'
 sudo: false
 script:
-    - "npm run test-cov"
+    - "npm run test:cov"
 after_script: "npm install coveralls && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
