--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,9 @@ sudo: false
 script:
     - "npm run test:cov"
 after_script: "npm install coveralls && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
+
+
+jobs:
+  include:
+    - stage: lint style
+      script: npm run lint
