chore: update travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,12 @@ node_js:
   - '6'
   - '7'
   - '8'
-sudo: false
-script:
-    - "npm run test:cov"
-after_script: "npm install coveralls && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
-
 
 jobs:
   include:
+    - stage: Test coverage
+      script:
+        - npm run test:cov
+        - npm install coveralls && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
     - stage: lint style
       script: npm run lint
