--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "del": "^3.0.0",
     "fecs": "^1.4.1",
     "istanbul": "^0.4.5",
+    "mkdirp": "^0.5.1",
     "mocha": "^4.0.1",
     "sinon": "^4.0.1",
     "sinon-chai": "^2.14.0"
