--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "del": "^3.0.0",
-    "fecs": "^1.4.1",
+    "fecs": "1.4.x",
     "istanbul": "^0.4.5",
     "mkdirp": "^0.5.1",
     "mocha": "^4.0.1",
